# handlers/handler.constant.go
@@ -9,9 +9,9 @@ import (
 )
 
 /**
-* =============================================
+* ==========================================
 * Handler Results All Jenis Kelamin Teritory
-*==============================================
+*===========================================
  */
 // GetConstants godoc
 // @Summary		Get List Jenis Kelamin
@@ -26,7 +26,6 @@ import (
 // @Failure 404 {object} schemes.SchemeResponses404Example
 // @Failure 409 {object} schemes.SchemeResponses409Example
 // @Failure 500 {object} schemes.SchemeResponses500Example
-// @Security	ApiKeyAuth
 // @Router /api/v1/constant/jenis-kelamin [get]
 func HandlerJenisKelamin(ctx *gin.Context) {
 	if len(constants.JenisKelamins) == 0 {
@@ -37,9 +36,9 @@ func HandlerJenisKelamin(ctx *gin.Context) {
 }
 
 /**
-* =============================================
+* ==============================================
 * Handler Results All Status Pernikahan Teritory
-*==============================================
+*===============================================
  */
 // GetConstants godoc
 // @Summary		Get List Status Pernikahan
@@ -54,7 +53,6 @@ func HandlerJenisKelamin(ctx *gin.Context) {
 // @Failure 404 {object} schemes.SchemeResponses404Example
 // @Failure 409 {object} schemes.SchemeResponses409Example
 // @Failure 500 {object} schemes.SchemeResponses500Example
-// @Security	ApiKeyAuth
 // @Router /api/v1/constant/status-pernikahan [get]
 func HandlerStatusPernikahan(ctx *gin.Context) {
 	if len(constants.StatusPernikahans) == 0 {
@@ -62,4 +60,31 @@ func HandlerStatusPernikahan(ctx *gin.Context) {
 		return
 	}
 	helpers.APIResponse(ctx, "Status Pernikahan data already to use", http.StatusOK, constants.StatusPernikahans)
+}
+
+/**
+* ==============================================
+* Handler Results All Role User Teritory
+*===============================================
+ */
+// GetConstants godoc
+// @Summary		Get List Role User
+// @Description	Get List Role User
+// @Tags		Constant
+// @Accept		json
+// @Produce		json
+// @Success 200 {object} schemes.SchemeResponses
+// @Failure 400 {object} schemes.SchemeResponses400Example
+// @Failure 401 {object} schemes.SchemeResponses401Example
+// @Failure 403 {object} schemes.SchemeResponses403Example
+// @Failure 404 {object} schemes.SchemeResponses404Example
+// @Failure 409 {object} schemes.SchemeResponses409Example
+// @Failure 500 {object} schemes.SchemeResponses500Example
+// @Router /api/v1/constant/role-user [get]
+func HandlerRoleUser(ctx *gin.Context) {
+	if len(constants.RoleUsers) == 0 {
+		helpers.APIResponse(ctx, "Role User data not found", http.StatusInternalServerError, nil)
+		return
+	}
+	helpers.APIResponse(ctx, "Role User data already to use", http.StatusOK, constants.RoleUsers)
 }
