# routes/route.user.go
@@ -4,7 +4,9 @@ import (
 	"github.com/gin-gonic/gin"
 	"gorm.io/gorm"
 
+	"github.com/nutwreck/admin-loker-service/configs"
 	"github.com/nutwreck/admin-loker-service/handlers"
+	"github.com/nutwreck/admin-loker-service/middlewares"
 	"github.com/nutwreck/admin-loker-service/repositories"
 	"github.com/nutwreck/admin-loker-service/services"
 )
@@ -13,11 +15,18 @@ func NewRouteUser(db *gorm.DB, router *gin.Engine) {
 	repositoryUser := repositories.NewRepositoryUser(db)
 	serviceUser := services.NewServiceUser(repositoryUser)
 	handlerUser := handlers.NewHandlerUser(serviceUser)
+	routeUser := "/api/v1/auth"
 
-	route := router.Group("/api/v1/auth")
+	route := router.Group(routeUser)
+
+	routePrivate := router.Group(routeUser)
+	routePrivate.Use(middlewares.AuthToken())
+	routePrivate.Use(middlewares.AuthRole(configs.RoleConfig))
 
 	route.GET("/ping", handlerUser.HandlerPing)
 	route.POST("/register", handlerUser.HandlerRegister)
 	route.POST("/login", handlerUser.HandlerLogin)
-	route.POST("/refresh-token", handlerUser.HandlerRefreshToken)
+	routePrivate.GET("/refresh-token", handlerUser.HandlerRefreshToken)
+	routePrivate.PUT("/update", handlerUser.HandlerUpdate)
+	routePrivate.GET("/data-user", handlerUser.HandleDataUser)
 }
